--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "start": "electron ."
   },
   "author": "Christopher Adatan",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "^21.2.2",
+    "electron-store": "^8.1.0"
+  }
 }
