--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "electron": "^21.2.2",
     "selenium-webdriver": "^4.6.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.2"
   }
 }
