--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "A simple inventory display for Active Directory computers",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "Christopher Adatan",
   "license": "ISC",
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.3",
+    "@electron-forge/maker-deb": "^6.0.3",
+    "@electron-forge/maker-rpm": "^6.0.3",
+    "@electron-forge/maker-squirrel": "^6.0.3",
+    "@electron-forge/maker-zip": "^6.0.3",
     "electron": "^21.2.2",
     "selenium-webdriver": "^4.6.1"
   },
   "dependencies": {
-    "bootstrap": "^5.2.2"
+    "bootstrap": "^5.2.2",
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
